# mdns-filter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml
mdns_filter/: __main__.py  const.py  filter.py  mdns.py  net.py  parse.py  repeater.py  rules.py  util.py
nix/: module.nix  test-config.nix
src/: error.rs  lib.rs  main.rs  repeater.rs
src/config/: filter.rs  mod.rs
src/filter/: engine.rs  mod.rs  pattern.rs
src/mdns/: consts.rs  mod.rs  packet.rs  parser.rs
src/net/: interface.rs  mod.rs  socket.rs
tests/: conftest.py  test_cli.py  test_filter.py  test_filtering_integration.py  test_mdns.py  test_net.py  test_parse.py  test_rules.py  test_util.py
