[package]
name = "mdns-filter"
version = "0.2.3"
edition = "2021"
authors = ["Jesse Dhillon <jesse@dhillon.com>"]
description = "A filtering mDNS repeater"
license = "MIT"
repository = "https://github.com/jessedhillon/mdns-filter"
keywords = ["mdns", "multicast", "dns", "filter", "repeater"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Networking
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["net", "ioctl"] }
ipnet = "2"

# Pattern matching
glob = "0.3"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "mdns-filter"
path = "src/main.rs"
