[tool.poetry]
name = "mdns_filter"
version = "0.0.0"
description = "A filtering mDNS repeater"
authors = ["Jesse Dhillon <jesse@dhillon.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
redis = "*"
pydantic = "*"
click = "^8.3.1"
pyyaml = "^6.0.3"

[tool.poetry.extras]
dev = []

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
types-setuptools = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
lint.select = [ "E", "F", "B", "T" ]
lint.extend-ignore = [
    "I",
    "B008"  # calling function in parameter list
]
preview = true
target-version = "py313"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.conventional-msg]
types = ["chore", "docs", "feat", "fix", "refactor", "revise", "wip"]
areas = ["all", "cli", "config", "const", "dev", "filter", "net", "parse", "tests", "util"]
allow_omit_area = ["docs", "wip"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
